unpackaged/main/default/objects/Lead/fields/AdobeCampaignID__c.field-meta.xml
<CustomField>
    <fullName>AdobeCampaignID__c</fullName>
    <label>AdobeCampaignID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>