unpackaged/main/default/objects/Lead/fields/Age2__c.field-meta.xml
<CustomField>
    <fullName>Age2__c</fullName>
    <description>Calculates the age of the lead if date of brith is provided</description>
    <formula>IF(
   
   NOT(ISBLANK(DATEVALUE(Date_of_Birth__c))),

   FLOOR((TODAY() - DATEVALUE( Date_of_Birth__c ))/365),

   0

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>