unpackaged/main/default/objects/Lead/fields/Allied_Trade__c.field-meta.xml
<CustomField>
    <fullName>Allied_Trade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allied Trade</label>
    <type>Checkbox</type>
</CustomField>