unpackaged/main/default/objects/Lead/fields/Business_Equipment_GIT__c.field-meta.xml
<CustomField>
    <fullName>Business_Equipment_GIT__c</fullName>
    <description>Cover required - Electronic business equipment (for GIT, referred to as GADGET in the backend)</description>
    <label>Business Equipment (GIT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>