unpackaged/main/default/objects/Lead/fields/Business_Equipment_PI__c.field-meta.xml
<CustomField>
    <fullName>Business_Equipment_PI__c</fullName>
    <description>Cover required - Electronic business equipment (for PI, referred to as BLAPTOP in the backend)</description>
    <label>Business Equipment (PI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>