unpackaged/main/default/objects/Lead/fields/Call_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Call_Outcome__c</fullName>
    <label>Call Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No answer, left vm</fullName>
            </value>
            <value>
                <fullName>Quoted - didn&#39;t buy</fullName>
            </value>
            <value>
                <fullName>Quoted - bought</fullName>
            </value>
            <value>
                <fullName>Don&#39;t need anymore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>