unpackaged/main/default/objects/Lead/fields/Calls_made__c.field-meta.xml
<CustomField>
    <fullName>Calls_made__c</fullName>
    <description>This will track how many calls have been made in order to trying to reach a customer. Updated using flow (Lead)</description>
    <label>No.of Calls</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>