unpackaged/main/default/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I&#39;m self employed</fullName>
            </value>
            <value>
                <fullName>I trade as a partnership</fullName>
            </value>
            <value>
                <fullName>I trade as a limited company</fullName>
            </value>
            <value>
                <fullName>I&#39;m employed</fullName>
            </value>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole Proprietor</fullName>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>