unpackaged/main/default/objects/Lead/fields/Contact_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Record_Id__c</fullName>
    <description>This field is used in Refer a Friend (RAF) project. Field will store a recordId for the Contact the Lead was referred by and then used in the flow to populate Referred By lookup field on the same record.
Admin eyes only - to be removed from the page layout.</description>
    <label>ContactRecordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>