unpackaged/main/default/objects/Lead/fields/Contract_Works__c.field-meta.xml
<CustomField>
    <fullName>Contract_Works__c</fullName>
    <description>Cover level required for Contract Works</description>
    <label>Contract Works</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>