unpackaged/main/default/objects/Lead/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Correlation Id sent by AWS</description>
    <label>Correlation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>