unpackaged/main/default/objects/Lead/fields/Cover__c.field-meta.xml
<CustomField>
    <fullName>Cover__c</fullName>
    <label>Cover</label>
    <length>255</length>
    <type>Text</type>
</CustomField>