unpackaged/main/default/objects/Lead/fields/Cover_Type__c.field-meta.xml
<CustomField>
    <fullName>Cover_Type__c</fullName>
    <description>Based on Scheme ID</description>
    <label>Cover_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>