unpackaged/main/default/objects/Lead/fields/Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Date_Time__c</fullName>
    <description>Converts system field to show date and time record was created</description>
    <formula>DATETIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Date/Time</label>
    <type>DateTime</type>
</CustomField>