unpackaged/main/default/objects/Lead/fields/Create_Time__c.field-meta.xml
<CustomField>
    <fullName>Create_Time__c</fullName>
    <description>Extract time from system create date field</description>
    <formula>HOUR(TIMEVALUE( CreatedDate ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Create Hour</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>