unpackaged/main/default/objects/Lead/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Converting Date Time CreateDate to Date only</description>
    <formula>DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>