unpackaged/main/default/objects/Lead/fields/Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Time__c</fullName>
    <description>Extracts time value from the Create Date field, as time doesnt show in the reports, date only.</description>
    <formula>TIMEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What time was lead created</inlineHelpText>
    <label>Created Time</label>
    <type>Time</type>
</CustomField>