unpackaged/main/default/objects/Lead/fields/Driver_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Driver_Employment_Type__c</fullName>
    <label>Driver Employment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>