unpackaged/main/default/objects/Lead/fields/Driver_Occupation_Code__c.field-meta.xml
<CustomField>
    <fullName>Driver_Occupation_Code__c</fullName>
    <label>Driver Occupation Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>