unpackaged/main/default/objects/Lead/fields/DupeCheckDone__c.field-meta.xml
<CustomField>
    <fullName>DupeCheckDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update by Lead - Check for duplicate records flow after dupe check runs</description>
    <label>DupeCheckDone</label>
    <type>Checkbox</type>
</CustomField>