unpackaged/main/default/objects/Lead/fields/Duplicate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Record triggered flow will run to check of new lead has a matching record on Sf already. If yes, this checkbox will be updated to true.</description>
    <label>Duplicate</label>
    <type>Checkbox</type>
</CustomField>