unpackaged/main/default/objects/Lead/fields/Existing_Liability__c.field-meta.xml
<CustomField>
    <fullName>Existing_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Liability</label>
    <type>Checkbox</type>
</CustomField>