unpackaged/main/default/objects/Lead/fields/Full_Quote_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Full_Quote_Timestamp__c</fullName>
    <description>Exact date and time when full quote was triggered on the website and pushed into SF</description>
    <label>Full Quote Timestamp</label>
    <type>DateTime</type>
</CustomField>