unpackaged/main/default/objects/Lead/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Google Ads click Id used for Google Ads &amp; Salesforce integration for setting up offline sales tracking.

https://support.google.com/google-ads/answer/6179720?sjid=7025047583246009131-EU#zippy=%2Cwhat-google-ads-retrieves-and-stores-from-your-salesforce-account</description>
    <label>GCLID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>