unpackaged/main/default/objects/Lead/fields/GuideWireId__c.field-meta.xml
<CustomField>
    <fullName>GuideWireId__c</fullName>
    <externalId>true</externalId>
    <label>GuideWireId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>