unpackaged/main/default/objects/Lead/fields/GuideWireVanRenewalTerm__c.field-meta.xml
<CustomField>
    <fullName>GuideWireVanRenewalTerm__c</fullName>
    <label>GuideWireVanRenewalTerm</label>
    <type>Date</type>
</CustomField>