unpackaged/main/default/objects/Lead/fields/Has_Van__c.field-meta.xml
<CustomField>
    <fullName>Has_Van__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Van</label>
    <type>Checkbox</type>
</CustomField>