unpackaged/main/default/objects/Lead/fields/Haulage__c.field-meta.xml
<CustomField>
    <fullName>Haulage__c</fullName>
    <label>Haulage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>