unpackaged/main/default/objects/Lead/fields/Haulage_Use__c.field-meta.xml
<CustomField>
    <fullName>Haulage_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Haulage Use</label>
    <type>Checkbox</type>
</CustomField>