unpackaged/main/default/objects/Lead/fields/Hired_In_Plant__c.field-meta.xml
<CustomField>
    <fullName>Hired_In_Plant__c</fullName>
    <description>Cover level required for Hired in Plant</description>
    <label>Hired In Plant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>