unpackaged/main/default/objects/Lead/fields/Inbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of inbound calls made for this lead</inlineHelpText>
    <label>Inbound Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>