unpackaged/main/default/objects/Lead/fields/Indicative_Price__c.field-meta.xml
<CustomField>
    <fullName>Indicative_Price__c</fullName>
    <description>Indicative price shown on the website before full quote is ran and final (Quoted Price) is generated.</description>
    <label>Indicative Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>