unpackaged/main/default/objects/Lead/fields/isPersonalEmail__c.field-meta.xml
<CustomField>
    <fullName>isPersonalEmail__c</fullName>
    <formula>OR(
   CONTAINS(Email, &quot;@gmail.com&quot;),
   CONTAINS(Email, &quot;@yahoo.com&quot;),
   CONTAINS(Email, &quot;@outlook.com&quot;),
   CONTAINS(Email, &quot;@hotmail.com&quot;),
   CONTAINS(Email, &quot;@icloud.com&quot;),
   CONTAINS(Email, &quot;@hotmail.co.uk&quot;),
   CONTAINS(Email, &quot;@yahoo.co.uk&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isPersonalEmail</label>
    <type>Checkbox</type>
</CustomField>