unpackaged/main/default/objects/Lead/fields/Last_Modified_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Time__c</fullName>
    <description>Extracts time value from the Last Modified Date field, as time doesnt show in the reports, date only.</description>
    <formula>TIMEVALUE( LastModifiedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What time was lead last modified</inlineHelpText>
    <label>Last Modified Time</label>
    <type>Time</type>
</CustomField>