unpackaged/main/default/objects/Lead/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>Converts 15 digit record id to 18 digit id</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead ID</label>
    <type>Text</type>
</CustomField>