unpackaged/main/default/objects/Lead/fields/Lead_Outcome_Retired__c.field-meta.xml
<CustomField>
    <fullName>Lead_Outcome_Retired__c</fullName>
    <description>Capture the reason Lead is being moved to qualified - controlled via flow using Call a Call Tasks</description>
    <label>Lead Outcome-Retired</label>
    <length>200</length>
    <type>Text</type>
</CustomField>