unpackaged/main/default/objects/Lead/fields/Lead_Priority__c.field-meta.xml
<CustomField>
    <fullName>Lead_Priority__c</fullName>
    <formula>IF( 
    NumberOfEmployees &gt; 9,
    IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 15),
    
     IF(
         Quoted_Price__c &gt; 299, 
         IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, 15),
            null

)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Priority</label>
    <type>Text</type>
</CustomField>