unpackaged/main/default/objects/Lead/fields/Legal_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Legal_Expenses__c</fullName>
    <description>Cover level required for Legal Expenses</description>
    <label>Legal Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>