unpackaged/main/default/objects/Lead/fields/Limited_Company__c.field-meta.xml
<CustomField>
    <fullName>Limited_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Limited Company</label>
    <type>Checkbox</type>
</CustomField>