unpackaged/main/default/objects/Lead/fields/Occupation_Name__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Name__c</fullName>
    <label>Occupation Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>