unpackaged/main/default/objects/Lead/fields/Online_Sale__c.field-meta.xml
<CustomField>
    <fullName>Online_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controlled via flow to identify the leads that purchased policy online without agents interferance</description>
    <label>Online Sale</label>
    <type>Checkbox</type>
</CustomField>