unpackaged/main/default/objects/Lead/fields/OP_OutboundCallAttempt__c.field-meta.xml
<CustomField>
    <fullName>OP_OutboundCallAttempt__c</fullName>
    <label>Outbound Call Attempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Attempt</fullName>
            </value>
            <value>
                <fullName>2nd Attempt</fullName>
            </value>
            <value>
                <fullName>3rd Attempt</fullName>
            </value>
            <value>
                <fullName>4th Attempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>