unpackaged/main/default/objects/Lead/fields/OP_OutboundCallDate__c.field-meta.xml
<CustomField>
    <fullName>OP_OutboundCallDate__c</fullName>
    <label>Outbound Call Date</label>
    <type>DateTime</type>
</CustomField>