unpackaged/main/default/objects/Lead/fields/OP_OutboundLeadPriority__c.field-meta.xml
<CustomField>
    <fullName>OP_OutboundLeadPriority__c</fullName>
    <label>Outbound Lead Priority</label>
    <length>20</length>
    <type>Text</type>
</CustomField>