unpackaged/main/default/objects/Lead/fields/OP_OutboundPhone__c.field-meta.xml
<CustomField>
    <fullName>OP_OutboundPhone__c</fullName>
    <label>Outbound Phone</label>
    <type>Phone</type>
</CustomField>