unpackaged/main/default/objects/Lead/fields/OP_Phone_Sanitised__c.field-meta.xml
<CustomField>
    <fullName>OP_Phone_Sanitised__c</fullName>
    <formula>IF(
BEGINS(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &#39;-&#39;, &#39;&#39;), &#39;)&#39;, &#39;&#39;), &#39;(&#39;, &#39;&#39;), &#39; &#39;, &#39;&#39;), &#39;+44&#39;),
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &#39;-&#39;, &#39;&#39;), &#39;)&#39;, &#39;&#39;), &#39;(&#39;, &#39;&#39;), &#39; &#39;, &#39;&#39;),
IF(
BEGINS(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &#39;-&#39;, &#39;&#39;), &#39;)&#39;, &#39;&#39;), &#39;(&#39;, &#39;&#39;), &#39; &#39;, &#39;&#39;), &#39;0&#39;),
&#39;+44&#39; &amp; right(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &#39;-&#39;, &#39;&#39;), &#39;)&#39;, &#39;&#39;), &#39;(&#39;, &#39;&#39;), &#39; &#39;, &#39;&#39;), (LEN(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &#39;-&#39;, &#39;&#39;), &#39;)&#39;, &#39;&#39;), &#39;(&#39;, &#39;&#39;), &#39; &#39;, &#39;&#39;)) - 1)),
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Phone, &#39;-&#39;, &#39;&#39;), &#39;)&#39;, &#39;&#39;), &#39;(&#39;, &#39;&#39;), &#39; &#39;, &#39;&#39;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone (Sanitised)</label>
    <type>Text</type>
</CustomField>