unpackaged/main/default/objects/Lead/fields/OP_RecalculateOutboundCallDate__c.field-meta.xml
<CustomField>
    <fullName>OP_RecalculateOutboundCallDate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Outbound Call Date</label>
    <type>Checkbox</type>
</CustomField>