unpackaged/main/default/objects/Lead/fields/OP_SyncToAWS__c.field-meta.xml
<CustomField>
    <fullName>OP_SyncToAWS__c</fullName>
    <formula>DATEVALUE(OP_OutboundCallDate__c) = TODAY() &amp;&amp;
HOUR(TIMEVALUE(OP_OutboundCallDate__c)) = HOUR(TIMEVALUE(NOW())) &amp;&amp;
MINUTE(TIMEVALUE(OP_OutboundCallDate__c)) = MINUTE(TIMEVALUE(NOW()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sync to AWS</label>
    <type>Checkbox</type>
</CustomField>