unpackaged/main/default/objects/Lead/fields/Open_Claim__c.field-meta.xml
<CustomField>
    <fullName>Open_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Claim</label>
    <type>Checkbox</type>
</CustomField>