unpackaged/main/default/objects/Lead/fields/Outbound_Calls__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Total number of outbound calls made for this lead</inlineHelpText>
    <label>Outbound Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>