unpackaged/main/default/objects/Lead/fields/Outbound_Dialler_Calls__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Dialler_Calls__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This field will be updated by flow that will calculate total number of outbound calls made by the dialler to the relevant lead.
This is needed because Call Type is automatically updated to Incoming for calls made by the dialler. And this its system field we are unable to modify it.</description>
    <label>Outbound (Dialler) Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>