unpackaged/main/default/objects/Lead/fields/Own_Plant__c.field-meta.xml
<CustomField>
    <fullName>Own_Plant__c</fullName>
    <description>Cover level required for Own Plant</description>
    <label>Own Plant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>