unpackaged/main/default/objects/Lead/fields/Partial_Quote_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Partial_Quote_Timestamp__c</fullName>
    <description>Exact date and time when partial quote was triggered on the website and pushed into SF</description>
    <label>Partial Quote Timestamp</label>
    <type>DateTime</type>
</CustomField>