unpackaged/main/default/objects/Lead/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PerYear</fullName>
            </value>
            <value>
                <fullName>PerMonth</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
                <isActive>false</isActive>
                <label>Annual</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
                <isActive>false</isActive>
                <label>Monthly</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>