unpackaged/main/default/objects/Lead/fields/Phone_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Phone_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone Opt In</label>
    <type>Checkbox</type>
</CustomField>