unpackaged/main/default/objects/Lead/fields/Policy_Originated__c.field-meta.xml
<CustomField>
    <fullName>Policy_Originated__c</fullName>
    <label>Policy Originated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>