unpackaged/main/default/objects/Lead/fields/PolicyGuideWireId__c.field-meta.xml
<CustomField>
    <fullName>PolicyGuideWireId__c</fullName>
    <label>PolicyGuideWireId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>