unpackaged/main/default/objects/Lead/fields/Portal_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Portal_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Opt In</label>
    <type>Checkbox</type>
</CustomField>