unpackaged/main/default/objects/Lead/fields/Post_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Post_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Opt In</label>
    <type>Checkbox</type>
</CustomField>