unpackaged/main/default/objects/Lead/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <label>Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>