unpackaged/main/default/objects/Lead/fields/Professional_Indemnity__c.field-meta.xml
<CustomField>
    <fullName>Professional_Indemnity__c</fullName>
    <label>Professional Indemnity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>