unpackaged/main/default/objects/Lead/fields/Profile_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Profile_Date_of_Birth__c</fullName>
    <label>Profile Date of Birth</label>
    <type>DateTime</type>
</CustomField>