unpackaged/main/default/objects/Lead/fields/Profile_Email__c.field-meta.xml
<CustomField>
    <fullName>Profile_Email__c</fullName>
    <label>Profile Email</label>
    <type>Email</type>
</CustomField>