unpackaged/main/default/objects/Lead/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Updated by the integration to keep track how far into their online journey each Lead got before we picked them up.</description>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Partial Quote</fullName>
            </value>
            <value>
                <fullName>Full Quote</fullName>
            </value>
            <value>
                <fullName>Sold Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>