unpackaged/main/default/objects/Lead/fields/Quoted_Price__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price__c</fullName>
    <description>The amount customer was quoted for their insurance in the online journey</description>
    <inlineHelpText>The amount customer was quoted for their insurance in the online journey</inlineHelpText>
    <label>Quoted Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>