unpackaged/main/default/objects/Lead/fields/Reason_for_Cover__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cover__c</fullName>
    <description>This field is capturing data coming from website. The following question was introduced to the journey, to try and understand why people are getting particular cover.
Question - Which option best describes your cover needs right now?</description>
    <inlineHelpText>Answer to the QTB question &#39;Which option best describes your cover needs right now?&#39;</inlineHelpText>
    <label>Reason for Cover</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ongoing cover for my business</fullName>
            </value>
            <value>
                <fullName>Cover for a specific job or contract</fullName>
            </value>
            <value>
                <fullName>Short-term cover during a busy period</fullName>
            </value>
            <value>
                <fullName>I&#39;m not sure yet, I&#39;m just getting started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>